--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1877,11 +1877,179 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
 
 \subsection{Performance and fairness evaluation for the Workflow applied with the Fairness through unawareness with priori detection algorithm}
 
+\subsubsection{Best models}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Best parameters} \\
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\
+    \hline
+\end{tabular}
+
+\subsubsection{Accuracy}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Accuracy} \\ 
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\ 
+    \hline
+\end{tabular}
+
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
+
 \subsection{Performance and fairness evaluation for the Workflow applied with the Fairness through data rebalancing algorithm}
+
+\subsubsection{Best models}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Best parameters} \\
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\
+    \hline
+\end{tabular}
+
+\subsubsection{Accuracy}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Accuracy} \\ 
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\ 
+    \hline
+\end{tabular}
+
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
 
 \subsection{Performance and fairness evaluation for the Workflow applied with the Fairness through Equalized-Odds Post-Processing with Threshold Optimizer}
 
+\subsubsection{Best models}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Best parameters} \\
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\
+    \hline
+\end{tabular}
+
+\subsubsection{Accuracy}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Accuracy} \\ 
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\ 
+    \hline
+\end{tabular}
+
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
+
 \subsection{Performance and fairness evaluation for the Workflow applied with the Fairness through GridSearch Reduction algorithm}
+
+\subsubsection{Best models}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Best parameters} \\
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\
+    \hline
+\end{tabular}
+
+\subsubsection{Accuracy}
+
+\begin{tabular}{|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Accuracy} \\ 
+    \hline
+    RandomForest Classifier  &  \\
+    \hline
+    XGBoost Classifier & \\
+    \hline
+    DecisionTree Classifier & \\ 
+    \hline
+\end{tabular}
+
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
 
 \subsection{Results comparaison}
 
