--- a/bibliography.bib
+++ b/bibliography.bib
@@ -368,3 +368,28 @@ year={2018},
 volume={abs/1806.11212},
 url={https://api.semanticscholar.org/CorpusID:49555790}
 }
+
+@inproceedings{agarwal2018reductions,
+title={A reductions approach to fair classification},
+author={Agarwal, Alekh and Beygelzimer, Alina and Dud{\'\i}k, Miroslav and Langford, John and Wallach, Hanna},
+booktitle={International conference on machine learning},
+pages={60--69},
+year={2018},
+organization={PMLR}
+}
+
+@inproceedings{10.5555/3157382.3157469,
+author = {Hardt, Moritz and Price, Eric and Srebro, Nathan},
+title = {Equality of Opportunity in Supervised Learning},
+year = {2016},
+isbn = {9781510838819},
+publisher = {Curran Associates Inc.},
+address = {Red Hook, NY, USA},
+abstract = {We propose a criterion for discrimination against a specified sensitive attribute in supervised learning, where the goal is to predict some target based on available features. Assuming data about the predictor, target, and membership in the protected group are available, we show how to optimally adjust any learned predictor so as to remove discrimination according to our definition. Our framework also improves incentives by shifting the cost of poor classification from disadvantaged groups to the decision maker, who can respond by improving the classification accuracy. We enourage readers to consult the more complete manuscript on the arXiv.},
+booktitle = {Proceedings of the 30th International Conference on Neural Information Processing Systems},
+pages = {3323–3331},
+numpages = {9},
+location = {Barcelona, Spain},
+series = {NIPS'16}
+}
+
