--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -601,7 +601,7 @@ In recent years, the ethical implications of artificial intelligence and machine
 It's important to clarify the workflow concept with a graph illustrating the presented workflow:
 
 \begin{center}
-    \includegraphics[width=.5,height=1]{final.png}
+    \includegraphics[width=.5\textwidth,height=1\textwidth]{final.png}
     \caption{Fair-by-Design Workflow}
 \end{center}
 
