--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -600,10 +600,11 @@ In recent years, the ethical implications of artificial intelligence and machine
 
 It's important to clarify the workflow concept with a graph illustrating the presented workflow:
 
-\begin{center}
+\begin{figure}[hp]
+    \centering
     \includegraphics[width=.5\textwidth,height=1\textwidth]{final.png}
     \caption{Fair-by-Design Workflow}
-\end{center}
+\end{figure}
 
 In the subsequent sections, each of these steps will be comprehensively explored to provide a detailed understanding of the fair-by-design workflow and its ethical underpinnings.
 
